--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -51,14 +51,9 @@
 Пожелания и багрепорты принимаются на email:
 deviantstudio.software@gmail.com
 
-Если вам понравилось приложение, пожалуйста оцените его:
-%2$s
-
-Сайт разработчика:
-http://deviantstudio-software.blogspot.com
 %1$s
 
-Все торговые марки, используемые в этом приложении принадлежат компании ООО Фотосайт.ру
+Все торговые марки, используемые в этом приложении, принадлежат компании ООО Фотосайт.ру
 Права на все фотографии, размещенные на Фотосайте, принадлежат авторам этих фото.
 "</string>
 	
