--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@ deviantstudio.software@gmail.com
 	<string name="categories">Categories</string>
 	<string name="ratings">Ratings</string>
 	<string name="share_subj">Check this out!</string>
-	<string name="share_text">Sent from Photosight Gallery</string>
+	<string name="share_text">Sent via Photosight Gallery</string>
 	<string name="share">Share</string>
 	<string name="share_link">Share URL</string>
 	<string name="share_img">Share Image</string>
