--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,12 @@ deviantstudio.software@gmail.com
     <string name="author">Author</string>
 	<string name="source">Source</string>
 	<string name="title">Title</string>
+    <string name="permission_denied_message">Can\'t save a photo without granting permission</string>
+    <string name="permission_rationale">Write external storage permission is permanently denied. To save photos you have to allow the Storage permission in the system settings.</string>
+	<string name="permission_rationale_title">Permission Required</string>
+	<string name="proceed">Proceed</string>
+	<string name="cancel">Cancel</string>
+    <string name="saved_successfully">Saved Successfully</string>
 
 
 </resources>
