build process improvements

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -55,6 +55,9 @@
     <string name="views">Перегляди</string>
     <string name="abouttext">"Photosight Gallery - це неофіційний застосунок для швидкого та зручного доступу до великого архіву високохудожніх світлин професійних фотографів (переважно москалів) photosight.ru
 Побажання та звіти про помилки приймаються на deviantstudio.software@gmail.com
+
+Change Log:
+
 %1$s
 
 %2$s"</string>
