parsing, content and bug fixes

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -32,7 +32,7 @@
 	<string name="category_92">Техно</string>
 
 
-	<string name="abouttext">"Photosight Gallery - это неофициальное приложение для быстрого и удобного доступа к крупнейшему в мире архиву высокохудожественных фоторабот профессиональных фотографов (преимущественно из стран СНГ) photosight.ru
+	<string name="abouttext">"Photosight Gallery - это неофициальное приложение для быстрого и удобного доступа к крупнейшему в мире архиву высокохудожественных фоторабот профессиональных фотографов (преимущественно из стран СНГ) sight.photo
 
 Пожелания и багрепорты принимаются на email:
 deviantstudio.software@gmail.com
