--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -54,7 +54,7 @@
     <string name="dislikes">Невподоби</string>
     <string name="retry">Повторити</string>
     <string name="views">Перегляди</string>
-    <string name="abouttext">"Photosight Gallery - це неофіційний застосунок для швидкого та зручного доступу до великого архіву високохудожніх світлин професійних фотографів (переважно москалів) photosight.ru
+    <string name="abouttext">"Photosight Gallery - це неофіційний застосунок для швидкого та зручного доступу до великого архіву високохудожніх світлин професійних фотографів (переважно москалів) sight.photo
 Побажання та звіти про помилки приймаються на deviantstudio.software@gmail.com
 
 Change Log:
