--- a/compose/src/main/res/values/strings.xml
+++ b/compose/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="thin_font" translatable="false">sans-serif-light</string>
     <string name="light_font" translatable="false">sans-serif</string>
 
-	<string name="abouttext">"sight.photo is a photographic community of talented photographers mostly from Europe. You can find there daily updated archive of creative artistic photos or share your own.
+	<string name="abouttext">"PhotoSight is a community of talented photographers mostly from Europe. You can find there daily updated archive of creative artistic photos or share your own.
 Photosight Gallery is an easy way to browse photos from https://sight.photo on your Android device.
 
 Please e-mail bugreports:
