--- a/compose/src/main/res/values-uk/strings.xml
+++ b/compose/src/main/res/values-uk/strings.xml
@@ -80,4 +80,5 @@ Change Log:
     <string name="source">Джерело</string>
     <string name="title">Назва</string>
     <string name="saved_successfully">Збережено вдало</string>
+    <string name="photo_details">Подробиці</string>
 </resources>
